==> njdjdjdj/Elderly-fall-alarm-system/HARDWARE/LCD_ZK.c <==
#include <LCD_ZK.H>
#include "stm32f1xx_hal.h"
#define uchar unsigned char
#define uint unsigned int
#define ulong unsigned long

void GBZK_GPIO_Config(void)
{		
	 
  GPIO_InitTypeDef GPIO_InitStruct;

  /* GPIO Ports Clock Enable */
  __HAL_RCC_GPIOB_CLK_ENABLE();

		HAL_GPIO_WritePin(OLED_OUT_Group,OLED_OUT_GPIO, GPIO_PIN_SET);//PB5高电平
		HAL_GPIO_WritePin(OLED_CS1_Group,OLED_rs_GPIO, GPIO_PIN_SET);//PB7高电平
		HAL_GPIO_WritePin(OLED_rs_Group,OLED_sid_GPIO, GPIO_PIN_SET);//PB8高电平
		HAL_GPIO_WritePin(OLED_sid_Group,OLED_sclk_GPIO, GPIO_PIN_SET);//PB9高电平
		HAL_GPIO_WritePin(OLED_sclk_Group,OLED_sclk_GPIO, GPIO_PIN_SET);//PB9高电平
		HAL_GPIO_WritePin(OLED_CS_Group,OLED_CS_GPIO, GPIO_PIN_SET);//PB4高电平

  GPIO_InitStruct.Pin = OLED_CS1_GPIO;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
  HAL_GPIO_Init(OLED_CS1_Group, &GPIO_InitStruct);//GPIO6初始化，推挽输出和上拉

  GPIO_InitStruct.Pin = OLED_rs_GPIO;
  HAL_GPIO_Init(OLED_rs_Group, &GPIO_InitStruct);//GPIO7初始化，推挽输出和上拉

  GPIO_InitStruct.Pin = OLED_sid_GPIO;
  HAL_GPIO_Init(OLED_sid_Group, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = OLED_sclk_GPIO;
  HAL_GPIO_Init(OLED_sclk_Group, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = OLED_CS_GPIO;
  HAL_GPIO_Init(OLED_CS_Group, &GPIO_InitStruct);
	
  GPIO_InitStruct.Pin = OLED_OUT_GPIO;
  HAL_GPIO_Init(OLED_OUT_Group, &GPIO_InitStruct);

	
	
}

void GBZK_ROMOUTSET(void)
{		
  GPIO_InitTypeDef GPIO_InitStruct;
  /* GPIO Ports Clock Enable */
  __HAL_RCC_GPIOB_CLK_ENABLE();

  GPIO_InitStruct.Pin = OLED_OUT_GPIO;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
  HAL_GPIO_Init(OLED_OUT_Group, &GPIO_InitStruct);  	 
}

void GBZK_ROMOUTRESET(void)
{		
  GPIO_InitTypeDef GPIO_InitStruct;
  /* GPIO Ports Clock Enable */
  __HAL_RCC_GPIOB_CLK_ENABLE();
 
  GPIO_InitStruct.Pin = OLED_OUT_GPIO;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
  HAL_GPIO_Init(OLED_OUT_Group, &GPIO_InitStruct);  	   	 
}
